--- a/index.html
+++ b/index.html
@@ -141,6 +141,46 @@
                 </div>
             </div>
         </section>
+        <!-- SECTION 4 -->
+        <section class="section-4">
+            <div class="section-4-container">
+                <div class="section-4-img">
+                    <img src="app/img/cheshire-county-hygiene-services@2x.png" alt="logo">
+                </div>
+                <div class="section-4-right">
+                    <div class="top">
+                        <h4>Erat tempor tempus erat malesuada</h4>
+                        <img src="app/img/devider/divider_orange_u7 copy 4.png" alt="devider">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
+                            amet
+                            lacus accumsan et viverra justo commodo.</p>
+                    </div>
+                    <div class="bottom">
+                        <article>
+                            <div class="icon">
+                                <i class="far fa-comment"></i>
+                            </div>
+                            <div class="title-n-text">
+                                <h5>Title</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                            </div>
+                            
+                        </article>
+                        <article>
+                            <div class="icon">
+                                <i class="far fa-comment"></i>
+                            </div>
+                            <div class="title-n-text">
+                                <h5>Title</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet
+                                lacus accumsan et viverra justo commodo.</p>
+                            </div>
+                        
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
