--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="swiper.js" defer></script>
     <!-- Title -->
     <title>Cheshire County</title>
+</head>
 <body>
     <!-- Navigation MENU -->
     <nav id="navigation">
@@ -40,7 +41,6 @@
             </div>
         </div>
     </nav>
-
     <!-- MAIN -->
     <main>
         <!-- SECTION 1 -->
@@ -178,6 +178,300 @@
                         
                         </article>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- SECTION 5 -->
+        <section class="section-5">
+            <div class="section-5-container">
+                <section class="section-5-top">
+                    <h4>WHY THIS IS AWESOME</h4>
+                    <img src="app/img/devider/divider_orange_u7 copy 3.png" alt="devider">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </section>
+                <section class="section-5-bottom">
+                    <div>
+                        <i class="fas fa-award"></i>
+                        <h5>Thoughtful Design</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod ibendum laoreet.</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-leaf"></i>
+                        <h5>Well Crafted</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean euismod bibendum.</p>
+                    </div>
+                    <div>
+                        <i class="fab fa-cc-visa"></i>
+                        <h5>Easy to Customize</h5>
+                        <p>Proin gravida dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                </section>
+            </div>
+        </section>
+        <!-- SECTION 6 -->
+        <section class="section-6">
+            <div class="section-6-container">
+                <section class="section-6-top">
+                    <h4>PRICING OPTIONS</h4>
+                    <img src="app/img/devider/divider_orange_u7 copy.png" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </section>
+                <section class="section-6-bottom">
+                    <article>
+                        <div class="article-top">
+                            <h5>Basic</h5>
+                            <h2><span>$</span>0</h2>
+                            <p>Free for Life</p>
+                        </div>
+                        <div class="article-mid">
+                            <p>OUR MOST POPULAR</p>
+                        </div>
+                        <div class="article-bottom">
+                            <p>1 GB OF SPACE</p>
+                            <p>10 GB OF BANDWIDTH</p>
+                            <p>3 WEBSITES</p>
+                            <p>BASIC CUSTOMIZATION</p>
+                            <p>WORDPRESS INTEGRATION</p>
+                            <p>EMAIL SUPPORT</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="article-top">
+                            <h5>Professional</h5>
+                            <h2><span>$</span>19</h2>
+                            <p>Monthly Payment</p>
+                        </div>
+                        <div class="article-mid">
+                            <p>OUR MOST POPULAR</p>
+                        </div>
+                        <div class="article-bottom">
+                            <p>5 GB OF SPACE</p>
+                            <p>50 GB OF BANDWIDTH</p>
+                            <p>12 WEBSITES</p>
+                            <p>ADVANCED CUSTOMIZATION</p>
+                            <p>WORDPRESS INTEGRATION</p>
+                            <p>EMAIL SUPPORT</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="article-top">
+                            <h5>Enterprise</h5>
+                            <h2><span>$</span>70</h2>
+                            <p>Monthly Payment</p>
+                        </div>
+                        <div class="article-mid">
+                            <p>Best Price</p>
+                        </div>
+                        <div class="article-bottom">
+                            <p>UNLIMITED SPACE</p>
+                            <p>UNLIMITED BANDWIDTH</p>
+                            <p>100 WEBSITES</p>
+                            <p>ADVANCED CUSTOMIZATION</p>
+                            <p>WORDPRESS INTEGRATION</p>
+                            <p>24/7 CUSTOMER SUPPORT</p>
+                        </div>
+                    </article>
+                </section>
+            </div>
+        </section>
+        <!-- SECTION 7 -->
+        <section class="section-7">
+            <div class="section-7-container">
+                <div class="section-7-top">
+                    <h4>WHAT OUR CUSTOMERS ARE SAYING</h4>
+                    <img src="app/img/devider/u273.svg" alt="devider">
+                </div>
+                <div class="section-7-bottom">
+                    <div class="swiper">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                            aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>Jeremy H.</h5>
+                                        <h6>Manager</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>John S.</h5>
+                                        <h6>Freelancer</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                        aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <div>
+                                            <h5>Susan W.</h5>
+                                            <h6>Photographer</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                            aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>Jeremy H.</h5>
+                                        <h6>Manager</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>John S.</h5>
+                                        <h6>Freelancer</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                        aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <div>
+                                            <h5>Susan W.</h5>
+                                            <h6>Photographer</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                            aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>Jeremy H.</h5>
+                                        <h6>Manager</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>John S.</h5>
+                                        <h6>Freelancer</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                        aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <div>
+                                            <h5>Susan W.</h5>
+                                            <h6>Photographer</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                            aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>Jeremy H.</h5>
+                                        <h6>Manager</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <h5>John S.</h5>
+                                        <h6>Freelancer</h6>
+                                    </div>
+                                </div>
+                                <div class="swiper-container">
+                                    <div class="review-top">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
+                                        aspernatur ex.</p>
+                                    </div>
+                                    <div class="review-bottom">
+                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
+                                        <div>
+                                            <h5>Susan W.</h5>
+                                            <h6>Photographer</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- If we need pagination -->
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- SECTION 8 -->
+        <section class="section-8">
+            <div class="section-8-container">
+                <div class="section-8-top">
+                    <h4>CONTACT US</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="section-8-bottom">
+                    <form action="#">
+                        <input type="text" placeholder="First name" required>
+                        <input type="text" placeholder="Last name" required>
+                        <input type="number" placeholder="Phone number" required>
+                        <div class="radio-input">
+                            <input type="radio" name="contact" id="personal" required>
+                            <label for="personal" name="contact">PERSONAL</label>
+                            <input type="radio" name="contact" id="company" required>
+                            <label for="company" name="contact">COMPANY</label>
+                        </div>
+                        <button>SEND</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- SECTION 9 -->
+        <section class="section-9">
+            <div class="section-9-container">
+                <div class="social-icons">
+                    <img src="app/img/facebook-logo.png" alt="fb">
+                    <img src="app/img/instagram-logo.png" alt="inst">
+                    <img src="app/img/twitter.png" alt="twit">
+                    <img src="app/img/pinterest.png" alt="pint">
+                    <img src="app/img/WIFI_icon.svg" alt="wifi">
+                </div>
+                <div class="copyright">
+                    <p>© 2019 Cheshire County</p>
                 </div>
             </div>
         </section>
