--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
     <!-- ViewPort -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
     <!-- Normalizer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Swiper JS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
     <!-- Custom Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/e57c2904bb.js" crossorigin="anonymous"></script>
+
     <!-- Cusom CSS -->
     <link rel="stylesheet" href="app/css/style.css">
+
     <!-- Custom JS -->
     <script src="script.js" defer></script>
+
     <!-- Swiper JS -->
     <script src="swiper.js" defer></script>
+
     <!-- Title -->
     <title>Cheshire County</title>
+    
 </head>
 <body>
     <!-- Navigation MENU -->
@@ -103,7 +112,7 @@
                     <button index="3"><span>Receive</span></button>
                 </div>
                 <!-- Swiper -->
-                <div class="swiper">
+                <div class="swiper swiper1">
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                         <!-- Slides -->
@@ -282,7 +291,7 @@
                     <img src="app/img/devider/u273.svg" alt="devider">
                 </div>
                 <div class="section-7-bottom">
-                    <div class="swiper">
+                    <div class="swiper swiper2">
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper">
                             <!-- Slides -->
@@ -290,27 +299,6 @@
                                 <div class="swiper-container">
                                     <div class="review-top">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
-                                            aspernatur ex.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <h5>Jeremy H.</h5>
-                                        <h6>Manager</h6>
-                                    </div>
-                                </div>
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <h5>John S.</h5>
-                                        <h6>Freelancer</h6>
-                                    </div>
-                                </div>
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
                                         aspernatur ex.</p>
                                     </div>
                                     <div class="review-bottom">
@@ -322,28 +310,8 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="swiper-slide">
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
-                                            aspernatur ex.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <h5>Jeremy H.</h5>
-                                        <h6>Manager</h6>
-                                    </div>
-                                </div>
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <h5>John S.</h5>
-                                        <h6>Freelancer</h6>
-                                    </div>
-                                </div>
                                 <div class="swiper-container">
                                     <div class="review-top">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
@@ -352,24 +320,14 @@
                                     <div class="review-bottom">
                                         <img src="app/img/avatar_2_u231.png" alt="avatar">
                                         <div>
-                                            <h5>Susan W.</h5>
-                                            <h6>Photographer</h6>
+                                            <h5>Tom W.</h5>
+                                            <h6>CEO</h6>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="swiper-slide">
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
-                                            aspernatur ex.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <h5>Jeremy H.</h5>
-                                        <h6>Manager</h6>
-                                    </div>
-                                </div>
                                 <div class="swiper-container">
                                     <div class="review-top">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
@@ -378,22 +336,10 @@
                                         <img src="app/img/avatar_2_u231.png" alt="avatar">
                                         <h5>John S.</h5>
                                         <h6>Freelancer</h6>
-                                    </div>
-                                </div>
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
-                                        aspernatur ex.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <div>
-                                            <h5>Susan W.</h5>
-                                            <h6>Photographer</h6>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="swiper-slide">
                                 <div class="swiper-container">
                                     <div class="review-top">
@@ -404,29 +350,6 @@
                                         <img src="app/img/avatar_2_u231.png" alt="avatar">
                                         <h5>Jeremy H.</h5>
                                         <h6>Manager</h6>
-                                    </div>
-                                </div>
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <h5>John S.</h5>
-                                        <h6>Freelancer</h6>
-                                    </div>
-                                </div>
-                                <div class="swiper-container">
-                                    <div class="review-top">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio
-                                        aspernatur ex.</p>
-                                    </div>
-                                    <div class="review-bottom">
-                                        <img src="app/img/avatar_2_u231.png" alt="avatar">
-                                        <div>
-                                            <h5>Susan W.</h5>
-                                            <h6>Photographer</h6>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -478,4 +401,3 @@
     </main>
 </body>
 </html>
-
